Use S3 base URL instead of PublicURL column from database

--- a/templates/album_list.html
+++ b/templates/album_list.html
@@ -59,7 +59,7 @@
 
   <a href="/album/{{ .Slug }}" class="streamLink">
     <div class="albumContainer">
-      <img class="streamImage" src="{{ .File.PublicURL }}" />
+      <img class="streamImage" src="{{ .PublicURL }}" />
       <div class="albumTitle">{{ .Name }}</div>
     </div>
   </a>
