Use dynamic quality for different sizes

--- a/templates/stream.html
+++ b/templates/stream.html
@@ -147,6 +147,7 @@
     const options = {
       index: link,
       event: event,
+      preloadRange: 0,
       onslide: function (index, slide) {
         const image = images[index];
 
