--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,12 @@
 
         <footer class="footer">
             <a href="/admin">Admin</a>
+            
+            <form method="post" action="/logout" class="inline">
+                <button type="submit" class="link-button">
+                  Logout
+                </button>
+              </form>
         </footer>
 
     </div> <!-- End of container div -->
